<resources>
    <string name="app_name">whitefie-SubBook</string>
    <string name="action_settings">Settings</string>
    <string name="save_changes">Save Changes</string>
    <string name="add_subscription">Add Subscription</string>
    <string name="add_subscription_name">Subscription Name</string>
    <string name="add_subscription_price">$/Mo.</string>
    <string name="add_subscription_date">Date Started (yyyy-mm-dd)</string>
    <string name="add_subscription_comment">Comment (Optional)</string>
    <string name="delete_subscription">Delete</string>
</resources>
